--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nodemon src/index.js"
   },
-  "author": "Mckinsey and Company",
+  "author": "McKinsey and Company",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.32.0",
@@ -14,7 +14,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4"
   }
 }
