--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "axios": "^1.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jose": "^4.11.2",
