--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-node_modules
-node_modules/
 .env
-./src/util/fetchedToken.txt
-src/util/fetchedToken.txt
+./fetchedToken.txt
+fetchedToken.txt
+node_modules
+.vscode/
