--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.3.1",
+    "jest": "^29.4.2",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "axios": "^1.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.1",
     "jose": "^4.11.2",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
