--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.4.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.6.0"
   },
   "dependencies": {
     "axios": "^1.3.0",
@@ -22,7 +23,7 @@
     "express": "^4.18.2",
     "joi": "^17.7.1",
     "jose": "^4.11.2",
-    "pg": "^8.8.0",
+    "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
   }
