--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
     "env": {
         "commonjs": true,
         "es2021": true,
-        "node": true,
-        "express": true
+        "node": true
     },
     "extends": "standard",
     "overrides": [
