--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "scripts": {
     "test": "nodemon src/index.js"
   },
-  "author": "Mckinsey and Company",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.32.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jose": "^4.11.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   }
 }
