--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-node_modules
-node_modules/
 .env
-./src/util/fetchedToken.txt
-src/util/fetchedToken.txt
+./fetchedToken.txt
+fetchedToken.txt
+node_modules
+.vscode
+node_modules/
 database/config/config.json
+.DS_Store
