--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "uhi-onboarding-backend",
   "version": "1.0.0",
   "description": "Open Source Client Backend for ABDM UHI",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "nodemon src/index.js"
+    "test": "nodemon index.js"
   },
   "license": "ISC",
   "devDependencies": {
@@ -13,15 +13,21 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20"
+    "jest": "^29.4.2",
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.6.0"
   },
   "dependencies": {
+    "axios": "^1.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.1",
     "jose": "^4.11.2",
-    "pg": "^8.8.0",
+    "pg": "^8.9.0",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
   }
+
 }
