--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "dev": "nodemon index.js",
     "start": "node index.js",
+    "lint": "eslint --fix",
     "prepare": "husky install"
   },
   "license": "ISC",
