--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jose": "^4.11.2",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.6.5",
     "sequelize": "^6.28.0"
   }
 }
