--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Open Source Client Backend for ABDM UHI",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "jest",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "lint": "eslint --fix",
+    "prepare": "husky install"
   },
   "license": "ISC",
   "devDependencies": {
@@ -13,7 +17,9 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.0",
     "jest": "^29.4.2",
+    "lint-staged": "^13.2.0",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.6.0"
   },
@@ -21,13 +27,21 @@
     "axios": "^1.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.3.1",
     "joi": "^17.7.1",
     "jose": "^4.11.2",
-    "pg": "^8.9.0",
-    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test -- --collectCoverage=true --passWithNoTests"
+    }
+  },
+  "lint-staged": {
+    "*.js": "npm run lint"
   }
-
 }
