--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^29.3.1",
     "joi": "^17.7.1",
     "jose": "^4.11.2",
+    "redis": "^4.6.5",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
